Fix model comparison analysis metrics calculation and reporting
- Rewrote metric extraction logic in `model_comparison.ipynb` to calculate F1, Precision, and Recall from existing columns in the batch results CSVs.
- Implemented `calculate_metrics()` function to handle metric calculations and added debug output for better traceability.
- Updated field performance reporting to use correct model names and convert decimal values to percentages.
- Enhanced error handling to provide clearer messages when accessing DataFrames and calculating metrics.
- Created `MODEL_COMPARISON_FIX_SUMMARY.md` to document the identified issues, root causes, solutions implemented, and expected results after the fix.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5939,45 +5939,58 @@
     "\n",
     "    timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
     "\n",
-    "    # Extract overall metrics\n",
-    "    try:\n",
-    "        llama_overall_f1 = llama_df['f1_score'].mean()\n",
-    "        llama_overall_precision = llama_df['precision'].mean()\n",
-    "        llama_overall_recall = llama_df['recall'].mean()\n",
-    "        llama_overall_accuracy = llama_df['overall_accuracy'].mean()\n",
-    "        llama_speed = llama_df['processing_time'].median()\n",
-    "    except Exception as e:\n",
-    "        rprint(f\"[yellow]⚠ Llama metrics unavailable: {e}[/yellow]\")\n",
-    "        if not llama_df.empty:\n",
-    "            rprint(f\"[cyan]Llama DF columns: {llama_df.columns.tolist()}[/cyan]\")\n",
-    "            rprint(f\"[cyan]Llama DF shape: {llama_df.shape}[/cyan]\")\n",
-    "        llama_overall_f1 = llama_overall_precision = llama_overall_recall = llama_overall_accuracy = llama_speed = 0\n",
+    "    def calculate_metrics(df, model_name):\n",
+    "        \"\"\"Calculate precision, recall, F1 from batch results DataFrame.\"\"\"\n",
+    "        if df.empty:\n",
+    "            rprint(f\"[yellow]⚠ {model_name} dataframe is empty[/yellow]\")\n",
+    "            return 0, 0, 0, 0, 0\n",
     "\n",
-    "    try:\n",
-    "        internvl_8b_overall_f1 = internvl3_quantized_df['f1_score'].mean()\n",
-    "        internvl_8b_overall_precision = internvl3_quantized_df['precision'].mean()\n",
-    "        internvl_8b_overall_recall = internvl3_quantized_df['recall'].mean()\n",
-    "        internvl_8b_overall_accuracy = internvl3_quantized_df['overall_accuracy'].mean()\n",
-    "        internvl_8b_speed = internvl3_quantized_df['processing_time'].median()\n",
-    "    except Exception as e:\n",
-    "        rprint(f\"[yellow]⚠ InternVL3-8B metrics unavailable: {e}[/yellow]\")\n",
-    "        if not internvl3_quantized_df.empty:\n",
-    "            rprint(f\"[cyan]InternVL3-8B DF columns: {internvl3_quantized_df.columns.tolist()}[/cyan]\")\n",
-    "            rprint(f\"[cyan]InternVL3-8B DF shape: {internvl3_quantized_df.shape}[/cyan]\")\n",
-    "        internvl_8b_overall_f1 = internvl_8b_overall_precision = internvl_8b_overall_recall = internvl_8b_overall_accuracy = internvl_8b_speed = 0\n",
+    "        try:\n",
+    "            # These columns exist in the CSV files\n",
+    "            accuracy = df['overall_accuracy'].mean()\n",
+    "            speed = df['processing_time'].median()\n",
     "\n",
-    "    try:\n",
-    "        internvl_2b_overall_f1 = internvl3_non_quantized_df['f1_score'].mean()\n",
-    "        internvl_2b_overall_precision = internvl3_non_quantized_df['precision'].mean()\n",
-    "        internvl_2b_overall_recall = internvl3_non_quantized_df['recall'].mean()\n",
-    "        internvl_2b_overall_accuracy = internvl3_non_quantized_df['overall_accuracy'].mean()\n",
-    "        internvl_2b_speed = internvl3_non_quantized_df['processing_time'].median()\n",
-    "    except Exception as e:\n",
-    "        rprint(f\"[yellow]⚠ InternVL3-2B metrics unavailable: {e}[/yellow]\")\n",
-    "        if not internvl3_non_quantized_df.empty:\n",
-    "            rprint(f\"[cyan]InternVL3-2B DF columns: {internvl3_non_quantized_df.columns.tolist()}[/cyan]\")\n",
-    "            rprint(f\"[cyan]InternVL3-2B DF shape: {internvl3_non_quantized_df.shape}[/cyan]\")\n",
-    "        internvl_2b_overall_f1 = internvl_2b_overall_precision = internvl_2b_overall_recall = internvl_2b_overall_accuracy = internvl_2b_speed = 0\n",
+    "            # Calculate precision, recall, F1 from field matching data\n",
+    "            # Precision = fields_matched / fields_extracted (when fields_extracted > 0)\n",
+    "            # Recall = fields_matched / total_fields\n",
+    "            valid_rows = df[df['fields_extracted'] > 0].copy()\n",
+    "\n",
+    "            if len(valid_rows) > 0:\n",
+    "                valid_rows['precision'] = valid_rows['fields_matched'] / valid_rows['fields_extracted']\n",
+    "                valid_rows['recall'] = valid_rows['fields_matched'] / valid_rows['total_fields']\n",
+    "\n",
+    "                precision = valid_rows['precision'].mean()\n",
+    "                recall = valid_rows['recall'].mean()\n",
+    "\n",
+    "                # F1 = 2 * precision * recall / (precision + recall)\n",
+    "                if precision + recall > 0:\n",
+    "                    f1 = 2 * precision * recall / (precision + recall)\n",
+    "                else:\n",
+    "                    f1 = 0\n",
+    "            else:\n",
+    "                precision = recall = f1 = 0\n",
+    "\n",
+    "            rprint(f\"[green]✅ {model_name} metrics calculated successfully[/green]\")\n",
+    "            rprint(f\"[cyan]  F1={f1:.4f}, P={precision:.4f}, R={recall:.4f}, Acc={accuracy:.2f}%, Speed={speed:.1f}s[/cyan]\")\n",
+    "\n",
+    "            return f1, precision, recall, accuracy, speed\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            rprint(f\"[red]❌ Error calculating {model_name} metrics: {e}[/red]\")\n",
+    "            if not df.empty:\n",
+    "                rprint(f\"[cyan]Available columns: {df.columns.tolist()}[/cyan]\")\n",
+    "                rprint(f\"[cyan]DataFrame shape: {df.shape}[/cyan]\")\n",
+    "            return 0, 0, 0, 0, 0\n",
+    "\n",
+    "    # Extract overall metrics for each model\n",
+    "    llama_overall_f1, llama_overall_precision, llama_overall_recall, llama_overall_accuracy, llama_speed = \\\n",
+    "        calculate_metrics(llama_df, 'Llama-3.2-Vision-11B')\n",
+    "\n",
+    "    internvl_8b_overall_f1, internvl_8b_overall_precision, internvl_8b_overall_recall, internvl_8b_overall_accuracy, internvl_8b_speed = \\\n",
+    "        calculate_metrics(internvl3_quantized_df, 'InternVL3-Quantized-8B')\n",
+    "\n",
+    "    internvl_2b_overall_f1, internvl_2b_overall_precision, internvl_2b_overall_recall, internvl_2b_overall_accuracy, internvl_2b_speed = \\\n",
+    "        calculate_metrics(internvl3_non_quantized_df, 'InternVL3-NonQuantized-2B')\n",
     "\n",
     "    # Build markdown report\n",
     "    report = f\"\"\"# Model Comparison Analysis Report\n",
@@ -6007,7 +6020,7 @@
     "\n",
     "**Highest Recall**: {'Llama-3.2-Vision-11B' if llama_overall_recall > max(internvl_8b_overall_recall, internvl_2b_overall_recall) else ('InternVL3-Quantized-8B' if internvl_8b_overall_recall > internvl_2b_overall_recall else 'InternVL3-NonQuantized-2B')} ({max(llama_overall_recall, internvl_8b_overall_recall, internvl_2b_overall_recall):.4f})\n",
     "\n",
-    "**Fastest**: {'Llama-3.2-Vision-11B' if llama_speed < min(internvl_8b_speed, internvl_2b_speed) else ('InternVL3-Quantized-8B' if internvl_8b_speed < internvl_2b_speed else 'InternVL3-NonQuantized-2B')} ({min(llama_speed, internvl_8b_speed, internvl_2b_speed):.1f}s)\n",
+    "**Fastest**: {'Llama-3.2-Vision-11B' if llama_speed > 0 and llama_speed < min(filter(lambda x: x > 0, [internvl_8b_speed, internvl_2b_speed])) else ('InternVL3-Quantized-8B' if internvl_8b_speed > 0 and internvl_8b_speed < internvl_2b_speed else 'InternVL3-NonQuantized-2B')} ({min(filter(lambda x: x > 0, [llama_speed, internvl_8b_speed, internvl_2b_speed])):.1f}s)\n",
     "\n",
     "---\n",
     "\n",
@@ -6070,22 +6083,31 @@
     "    # Add per-field performance if available\n",
     "    try:\n",
     "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
-    "            report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
-    "            report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
-    "            report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
+    "            # Access global field_performance from notebook scope\n",
+    "            fp = globals().get('field_performance', locals().get('field_performance'))\n",
+    "            if fp is not None and not fp.empty:\n",
+    "                report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
+    "                report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
+    "                report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
     "\n",
-    "            for field in field_performance.index:\n",
-    "                llama_acc = field_performance.loc[field, 'Llama-11B'] if 'Llama-11B' in field_performance.columns else 0\n",
-    "                internvl_8b_acc = field_performance.loc[field, 'InternVL3-8B'] if 'InternVL3-8B' in field_performance.columns else 0\n",
-    "                internvl_2b_acc = field_performance.loc[field, 'InternVL3-2B'] if 'InternVL3-2B' in field_performance.columns else 0\n",
-    "                best_model = field_performance.loc[field, 'best_model'] if 'best_model' in field_performance.columns else 'N/A'\n",
-    "                best_score = field_performance.loc[field, 'best_score'] if 'best_score' in field_performance.columns else 0\n",
+    "                for field in fp.index:\n",
+    "                    llama_acc = fp.loc[field, 'Llama-3.2-Vision'] if 'Llama-3.2-Vision' in fp.columns else 0\n",
+    "                    internvl_8b_acc = fp.loc[field, 'InternVL3-Quantized-8B'] if 'InternVL3-Quantized-8B' in fp.columns else 0\n",
+    "                    internvl_2b_acc = fp.loc[field, 'InternVL3-NonQuantized-2B'] if 'InternVL3-NonQuantized-2B' in fp.columns else 0\n",
+    "                    best_model = fp.loc[field, 'best_model'] if 'best_model' in fp.columns else 'N/A'\n",
+    "                    best_score = fp.loc[field, 'best_score'] if 'best_score' in fp.columns else 0\n",
     "\n",
-    "                report += f\"| {field} | {llama_acc:.1f}% | {internvl_8b_acc:.1f}% | {internvl_2b_acc:.1f}% | {best_model} | {best_score:.1f}% |\\n\"\n",
+    "                    # Convert to percentages (field_performance stores as decimals 0-1)\n",
+    "                    report += f\"| {field} | {llama_acc*100:.1f}% | {internvl_8b_acc*100:.1f}% | {internvl_2b_acc*100:.1f}% | {best_model} | {best_score*100:.1f}% |\\n\"\n",
     "\n",
-    "            report += \"\\n\"\n",
+    "                report += \"\\n\"\n",
+    "            else:\n",
+    "                report += \"_(Per-field performance data unavailable)_\\n\\n\"\n",
+    "        else:\n",
+    "            report += \"_(field_performance not found in scope)_\\n\\n\"\n",
     "    except Exception as e:\n",
     "        report += f\"_(Per-field metrics unavailable: {e})_\\n\\n\"\n",
+    "        rprint(f\"[yellow]⚠ Error accessing field_performance: {e}[/yellow]\")\n",
     "\n",
     "    # Add model specialization summary\n",
     "    report += \"\"\"---\n",
@@ -6096,12 +6118,14 @@
     "\n",
     "    try:\n",
     "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
-    "            llama_fields = (field_performance['best_model'] == 'Llama-11B').sum() if 'best_model' in field_performance.columns else 0\n",
-    "            internvl_8b_fields = (field_performance['best_model'] == 'InternVL3-8B').sum() if 'best_model' in field_performance.columns else 0\n",
-    "            internvl_2b_fields = (field_performance['best_model'] == 'InternVL3-2B').sum() if 'best_model' in field_performance.columns else 0\n",
-    "            total_fields = len(field_performance)\n",
+    "            fp = globals().get('field_performance', locals().get('field_performance'))\n",
+    "            if fp is not None and not fp.empty and 'best_model' in fp.columns:\n",
+    "                llama_fields = (fp['best_model'] == 'Llama-3.2-Vision').sum()\n",
+    "                internvl_8b_fields = (fp['best_model'] == 'InternVL3-Quantized-8B').sum()\n",
+    "                internvl_2b_fields = (fp['best_model'] == 'InternVL3-NonQuantized-2B').sum()\n",
+    "                total_fields = len(fp)\n",
     "\n",
-    "            report += f\"\"\"### Fields Where Each Model Performs Best\n",
+    "                report += f\"\"\"### Fields Where Each Model Performs Best\n",
     "\n",
     "| Model | Best-Performing Fields | Percentage | Count |\n",
     "|-------|----------------------|------------|-------|\n",
@@ -6110,8 +6134,13 @@
     "| **InternVL3-NonQuantized-2B** | {internvl_2b_fields/total_fields*100:.1f}% | {internvl_2b_fields}/{total_fields} | {'PRIMARY' if internvl_2b_fields > max(llama_fields, internvl_8b_fields) else 'NO SPECIALIZATION' if internvl_2b_fields == 0 else 'SECONDARY'} |\n",
     "\n",
     "\"\"\"\n",
+    "            else:\n",
+    "                report += \"_(Model specialization data unavailable)_\\n\\n\"\n",
+    "        else:\n",
+    "            report += \"_(field_performance not found)_\\n\\n\"\n",
     "    except Exception as e:\n",
     "        report += f\"_(Specialization metrics unavailable: {e})_\\n\\n\"\n",
+    "        rprint(f\"[yellow]⚠ Error calculating specialization: {e}[/yellow]\")\n",
     "\n",
     "    # Footer\n",
     "    report += f\"\"\"---\n",
@@ -6158,7 +6187,8 @@
     "except Exception as e:\n",
     "    rprint(f\"[bold red]❌ Report generation failed: {e}[/bold red]\")\n",
     "    import traceback\n",
-    "    traceback.print_exc()\n"
+    "    traceback.print_exc()\n",
+    ""
    ]
   },
   {
