Refactor generate_model_comparison_report function to accept DataFrames as parameters
- Updated function signature to include llama_df, internvl3_quantized_df, internvl3_non_quantized_df, and an optional field_performance_df.
- Removed reliance on global/local scope for field_performance data.
- Improved error handling and reporting for field-level accuracy and model specialization metrics.
- Streamlined report generation logic for better readability and maintainability.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5934,8 +5934,15 @@
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "\n",
-    "def generate_model_comparison_report():\n",
-    "    \"\"\"Generate comprehensive MODEL_COMPARISON_ANALYSIS.md from notebook analysis.\"\"\"\n",
+    "def generate_model_comparison_report(llama_df, internvl3_quantized_df, internvl3_non_quantized_df, field_performance_df=None):\n",
+    "    \"\"\"Generate comprehensive MODEL_COMPARISON_ANALYSIS.md from notebook analysis.\n",
+    "\n",
+    "    Args:\n",
+    "        llama_df: DataFrame with Llama batch results\n",
+    "        internvl3_quantized_df: DataFrame with InternVL3-8B batch results\n",
+    "        internvl3_non_quantized_df: DataFrame with InternVL3-2B batch results\n",
+    "        field_performance_df: Optional DataFrame with per-field performance comparison\n",
+    "    \"\"\"\n",
     "\n",
     "    timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
     "\n",
@@ -6081,33 +6088,28 @@
     "\"\"\"\n",
     "\n",
     "    # Add per-field performance if available\n",
-    "    try:\n",
-    "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
-    "            # Access global field_performance from notebook scope\n",
-    "            fp = globals().get('field_performance', locals().get('field_performance'))\n",
-    "            if fp is not None and not fp.empty:\n",
-    "                report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
-    "                report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
-    "                report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
+    "    if field_performance_df is not None and not field_performance_df.empty:\n",
+    "        try:\n",
+    "            report += \"### Field-Level Accuracy by Model\\n\\n\"\n",
+    "            report += \"| Field | Llama-11B | InternVL3-8B | InternVL3-2B | Best Model | Best Score |\\n\"\n",
+    "            report += \"|-------|-----------|--------------|--------------|------------|------------|\\n\"\n",
     "\n",
-    "                for field in fp.index:\n",
-    "                    llama_acc = fp.loc[field, 'Llama-3.2-Vision'] if 'Llama-3.2-Vision' in fp.columns else 0\n",
-    "                    internvl_8b_acc = fp.loc[field, 'InternVL3-Quantized-8B'] if 'InternVL3-Quantized-8B' in fp.columns else 0\n",
-    "                    internvl_2b_acc = fp.loc[field, 'InternVL3-NonQuantized-2B'] if 'InternVL3-NonQuantized-2B' in fp.columns else 0\n",
-    "                    best_model = fp.loc[field, 'best_model'] if 'best_model' in fp.columns else 'N/A'\n",
-    "                    best_score = fp.loc[field, 'best_score'] if 'best_score' in fp.columns else 0\n",
+    "            for field in field_performance_df.index:\n",
+    "                llama_acc = field_performance_df.loc[field, 'Llama-3.2-Vision'] if 'Llama-3.2-Vision' in field_performance_df.columns else 0\n",
+    "                internvl_8b_acc = field_performance_df.loc[field, 'InternVL3-Quantized-8B'] if 'InternVL3-Quantized-8B' in field_performance_df.columns else 0\n",
+    "                internvl_2b_acc = field_performance_df.loc[field, 'InternVL3-NonQuantized-2B'] if 'InternVL3-NonQuantized-2B' in field_performance_df.columns else 0\n",
+    "                best_model = field_performance_df.loc[field, 'best_model'] if 'best_model' in field_performance_df.columns else 'N/A'\n",
+    "                best_score = field_performance_df.loc[field, 'best_score'] if 'best_score' in field_performance_df.columns else 0\n",
     "\n",
-    "                    # Convert to percentages (field_performance stores as decimals 0-1)\n",
-    "                    report += f\"| {field} | {llama_acc*100:.1f}% | {internvl_8b_acc*100:.1f}% | {internvl_2b_acc*100:.1f}% | {best_model} | {best_score*100:.1f}% |\\n\"\n",
+    "                # Convert to percentages (field_performance stores as decimals 0-1)\n",
+    "                report += f\"| {field} | {llama_acc*100:.1f}% | {internvl_8b_acc*100:.1f}% | {internvl_2b_acc*100:.1f}% | {best_model} | {best_score*100:.1f}% |\\n\"\n",
     "\n",
-    "                report += \"\\n\"\n",
-    "            else:\n",
-    "                report += \"_(Per-field performance data unavailable)_\\n\\n\"\n",
-    "        else:\n",
-    "            report += \"_(field_performance not found in scope)_\\n\\n\"\n",
-    "    except Exception as e:\n",
-    "        report += f\"_(Per-field metrics unavailable: {e})_\\n\\n\"\n",
-    "        rprint(f\"[yellow]⚠ Error accessing field_performance: {e}[/yellow]\")\n",
+    "            report += \"\\n\"\n",
+    "        except Exception as e:\n",
+    "            report += f\"_(Error generating per-field metrics table: {e})_\\n\\n\"\n",
+    "            rprint(f\"[yellow]⚠ Error accessing field_performance: {e}[/yellow]\")\n",
+    "    else:\n",
+    "        report += \"_(Per-field performance data unavailable)_\\n\\n\"\n",
     "\n",
     "    # Add model specialization summary\n",
     "    report += \"\"\"---\n",
@@ -6116,16 +6118,14 @@
     "\n",
     "\"\"\"\n",
     "\n",
-    "    try:\n",
-    "        if 'field_performance' in locals() or 'field_performance' in globals():\n",
-    "            fp = globals().get('field_performance', locals().get('field_performance'))\n",
-    "            if fp is not None and not fp.empty and 'best_model' in fp.columns:\n",
-    "                llama_fields = (fp['best_model'] == 'Llama-3.2-Vision').sum()\n",
-    "                internvl_8b_fields = (fp['best_model'] == 'InternVL3-Quantized-8B').sum()\n",
-    "                internvl_2b_fields = (fp['best_model'] == 'InternVL3-NonQuantized-2B').sum()\n",
-    "                total_fields = len(fp)\n",
+    "    if field_performance_df is not None and not field_performance_df.empty and 'best_model' in field_performance_df.columns:\n",
+    "        try:\n",
+    "            llama_fields = (field_performance_df['best_model'] == 'Llama-3.2-Vision').sum()\n",
+    "            internvl_8b_fields = (field_performance_df['best_model'] == 'InternVL3-Quantized-8B').sum()\n",
+    "            internvl_2b_fields = (field_performance_df['best_model'] == 'InternVL3-NonQuantized-2B').sum()\n",
+    "            total_fields = len(field_performance_df)\n",
     "\n",
-    "                report += f\"\"\"### Fields Where Each Model Performs Best\n",
+    "            report += f\"\"\"### Fields Where Each Model Performs Best\n",
     "\n",
     "| Model | Best-Performing Fields | Percentage | Count |\n",
     "|-------|----------------------|------------|-------|\n",
@@ -6134,13 +6134,11 @@
     "| **InternVL3-NonQuantized-2B** | {internvl_2b_fields/total_fields*100:.1f}% | {internvl_2b_fields}/{total_fields} | {'PRIMARY' if internvl_2b_fields > max(llama_fields, internvl_8b_fields) else 'NO SPECIALIZATION' if internvl_2b_fields == 0 else 'SECONDARY'} |\n",
     "\n",
     "\"\"\"\n",
-    "            else:\n",
-    "                report += \"_(Model specialization data unavailable)_\\n\\n\"\n",
-    "        else:\n",
-    "            report += \"_(field_performance not found)_\\n\\n\"\n",
-    "    except Exception as e:\n",
-    "        report += f\"_(Specialization metrics unavailable: {e})_\\n\\n\"\n",
-    "        rprint(f\"[yellow]⚠ Error calculating specialization: {e}[/yellow]\")\n",
+    "        except Exception as e:\n",
+    "            report += f\"_(Error calculating specialization metrics: {e})_\\n\\n\"\n",
+    "            rprint(f\"[yellow]⚠ Error calculating specialization: {e}[/yellow]\")\n",
+    "    else:\n",
+    "        report += \"_(Model specialization data unavailable)_\\n\\n\"\n",
     "\n",
     "    # Footer\n",
     "    report += f\"\"\"---\n",
@@ -6172,7 +6170,7 @@
     "\n",
     "    # Write to file\n",
     "    output_path = Path('MODEL_COMPARISON_ANALYSIS.md')\n",
-    "    with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "    with output_path.open('w', encoding='utf-8') as f:\n",
     "        f.write(report)\n",
     "\n",
     "    rprint(f\"[green]✅ MODEL_COMPARISON_ANALYSIS.md updated ({len(report)} characters)[/green]\")\n",
@@ -6182,7 +6180,14 @@
     "\n",
     "# Execute report generation\n",
     "try:\n",
-    "    report_path = generate_model_comparison_report()\n",
+    "    # Pass dataframes and field_performance as parameters\n",
+    "    fp = field_performance if 'field_performance' in dir() else None\n",
+    "    report_path = generate_model_comparison_report(\n",
+    "        llama_df,\n",
+    "        internvl3_quantized_df,\n",
+    "        internvl3_non_quantized_df,\n",
+    "        fp\n",
+    "    )\n",
     "    rprint(f\"[bold green]✅ Auto-generation complete: {report_path}[/bold green]\")\n",
     "except Exception as e:\n",
     "    rprint(f\"[bold red]❌ Report generation failed: {e}[/bold red]\")\n",
