Enhance model comparison report generation to include hallucination analysis
- Added optional parameter `hallucination_summary` to the `generate_model_comparison_report` function.
- Implemented calculation of dataset statistics including document types and total fields.
- Updated report content to dynamically reflect the number of documents and fields.
- Included a new section for hallucination rates with detailed metrics for each model.

--- a/model_comparison.ipynb
+++ b/model_comparison.ipynb
@@ -5859,7 +5859,7 @@
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "\n",
-    "def generate_model_comparison_report(llama_df, internvl3_quantized_df, internvl3_non_quantized_df, field_performance_df=None):\n",
+    "def generate_model_comparison_report(llama_df, internvl3_quantized_df, internvl3_non_quantized_df, field_performance_df=None, hallucination_summary=None):\n",
     "    \"\"\"Generate comprehensive MODEL_COMPARISON_ANALYSIS.md from notebook analysis.\n",
     "\n",
     "    Args:\n",
@@ -5867,9 +5867,37 @@
     "        internvl3_quantized_df: DataFrame with InternVL3-8B batch results\n",
     "        internvl3_non_quantized_df: DataFrame with InternVL3-2B batch results\n",
     "        field_performance_df: Optional DataFrame with per-field performance comparison\n",
+    "        hallucination_summary: Optional DataFrame with hallucination analysis results\n",
     "    \"\"\"\n",
     "\n",
     "    timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "    # Calculate dataset statistics from actual data\n",
+    "    all_dfs = [df for df in [llama_df, internvl3_quantized_df, internvl3_non_quantized_df] if not df.empty]\n",
+    "\n",
+    "    if all_dfs:\n",
+    "        # Use first non-empty dataframe for dataset statistics\n",
+    "        sample_df = all_dfs[0]\n",
+    "        total_docs = len(sample_df)\n",
+    "\n",
+    "        # Count document types if column exists\n",
+    "        if 'document_type' in sample_df.columns:\n",
+    "            doctype_counts = sample_df['document_type'].value_counts()\n",
+    "            bank_count = doctype_counts.get('bank_statement', 0)\n",
+    "            invoice_count = doctype_counts.get('invoice', 0)\n",
+    "            receipt_count = doctype_counts.get('receipt', 0)\n",
+    "        else:\n",
+    "            bank_count = invoice_count = receipt_count = 0\n",
+    "\n",
+    "        # Calculate total fields from field performance or use total_fields column\n",
+    "        if field_performance_df is not None and not field_performance_df.empty:\n",
+    "            num_fields = len(field_performance_df)\n",
+    "        elif 'total_fields' in sample_df.columns:\n",
+    "            num_fields = int(sample_df['total_fields'].iloc[0])\n",
+    "        else:\n",
+    "            num_fields = 0\n",
+    "    else:\n",
+    "        total_docs = bank_count = invoice_count = receipt_count = num_fields = 0\n",
     "\n",
     "    def calculate_metrics(df, model_name):\n",
     "        \"\"\"Calculate precision, recall, F1 from batch results DataFrame.\"\"\"\n",
@@ -5929,8 +5957,8 @@
     "\n",
     "**Auto-Generated from Notebook**: {timestamp}\n",
     "**Source**: `model_comparison.ipynb`\n",
-    "**Dataset**: 195 documents (30 bank statements, 61 invoices, 104 receipts)\n",
-    "**Evaluation Fields**: 17 business document fields\n",
+    "**Dataset**: {total_docs} documents ({bank_count} bank statements, {invoice_count} invoices, {receipt_count} receipts)\n",
+    "**Evaluation Fields**: {num_fields} business document fields\n",
     "\n",
     "---\n",
     "\n",
@@ -5975,9 +6003,9 @@
     "![Document Type Confusion](output/visualizations/doctype_confusion_matrix.png)\n",
     "\n",
     "**3-model confusion matrices** showing classification performance for:\n",
-    "- Bank Statements (30 docs, 15.4%)\n",
-    "- Invoices (61 docs, 31.3%)\n",
-    "- Receipts (104 docs, 53.3%)\n",
+    "- Bank Statements ({bank_count} docs, {bank_count/total_docs*100 if total_docs > 0 else 0:.1f}%)\n",
+    "- Invoices ({invoice_count} docs, {invoice_count/total_docs*100 if total_docs > 0 else 0:.1f}%)\n",
+    "- Receipts ({receipt_count} docs, {receipt_count/total_docs*100 if total_docs > 0 else 0:.1f}%)\n",
     "\n",
     "### 3. Field Extraction Status\n",
     "![Field Confusion Heatmap](output/visualizations/field_confusion_heatmap.png)\n",
@@ -6006,7 +6034,30 @@
     "- Per-field hallucination (3 models)\n",
     "- Document-level distribution (3 models)\n",
     "\n",
-    "---\n",
+    "\"\"\"\n",
+    "\n",
+    "    # Add hallucination rates if available\n",
+    "    if hallucination_summary is not None and not hallucination_summary.empty:\n",
+    "        report += \"\"\"### Hallucination Rates\n",
+    "\n",
+    "| Model | Hallucination Rate | Correct NOT_FOUND Rate | Total Hallucinations |\n",
+    "|-------|-------------------|------------------------|----------------------|\n",
+    "\"\"\"\n",
+    "        for _, row in hallucination_summary.iterrows():\n",
+    "            model_name = row['Model']\n",
+    "            hall_rate = row['Hallucination Rate']\n",
+    "            not_found_rate = row['Correct NOT_FOUND Rate']\n",
+    "            total_hall = row['Total Hallucinations']\n",
+    "            report += f\"| **{model_name}** | {hall_rate} | {not_found_rate} | {total_hall} |\\n\"\n",
+    "\n",
+    "        report += \"\"\"\n",
+    "**Interpretation:**\n",
+    "- **Hallucination Rate**: % of NOT_FOUND fields where model invented a value\n",
+    "- **Correct NOT_FOUND Rate**: % of NOT_FOUND fields correctly identified as absent\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "    report += \"\"\"---\n",
     "\n",
     "## Per-Field Performance Summary\n",
     "\n",
@@ -6105,13 +6156,15 @@
     "\n",
     "# Execute report generation\n",
     "try:\n",
-    "    # Pass dataframes and field_performance as parameters\n",
+    "    # Pass dataframes, field_performance, and hallucination_summary as parameters\n",
     "    fp = field_performance if 'field_performance' in dir() else None\n",
+    "    hs = hallucination_summary if 'hallucination_summary' in dir() else None\n",
     "    report_path = generate_model_comparison_report(\n",
     "        llama_df,\n",
     "        internvl3_quantized_df,\n",
     "        internvl3_non_quantized_df,\n",
-    "        fp\n",
+    "        fp,\n",
+    "        hs\n",
     "    )\n",
     "    rprint(f\"[bold green]✅ Auto-generation complete: {report_path}[/bold green]\")\n",
     "except Exception as e:\n",
